--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -79,6 +79,8 @@ Table \ref{tab:abbreviations} lists abbreviations that are used in this work.
 		\hline
 		ILL              & \underline{I}nstitut \underline{L}aue-\underline{L}angevin, Grenoble, France. \tabularnewline
 		\hline
+		RLU              & \underline{R}elative \underline{L}attice \underline{U}nits, see chapter \ref{ch:xtal}. \tabularnewline
+		\hline
 		SO(n)            & \underline{S}pecial \underline{O}rthogonal Group in \underline{n} dimensions \cite[pp. 849-851]{Arfken2013}. \tabularnewline
 		\hline
 		SSSP		 & \underline{S}ingle \underline{S}ource \underline{S}hortest \underline{P}ath \cite[pp. 273-297]{Erickson2019}. \tabularnewline
