added missing items

--- a/tex/gl.tex
+++ b/tex/gl.tex
@@ -421,3 +421,11 @@ transformed and projected screen space position in a reserved variable named \ls
 Further results can be output from the shader by declaring \lstinline[language=C]|out| variables.
 These variables are connected to the inputs of the next shader in the rendering pipeline.
 % -----------------------------------------------------------------------------
+
+
+
+\section{Summary}
+Having introduced the basic mathematical formalisms of three-dimensional graphics, we proceed
+with the user-interfaces of this work's software. The software's graphical user interface makes use of the 
+concepts presented here to create a 3-d interactive representation of the triple-axis instrumental geometry
+and visualises possible collisions of the instrument with walls.
