--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -153,7 +153,7 @@ We realised two different methods for checking if two line segments intersect.
 \paragraph{Intersection check}
 The first one is a check without calculation of the actual intersection point. 
 This consists of testing if the two endpoints of line segment 1 are on two different sides of line
-segment 2, and vice versa \cite{TODO}. If both conditions are fulfilled, the two line segments intersect.
+segment 2, and vice versa \cite{IntersectionCheck2021}. If both conditions are fulfilled, the two line segments intersect.
 While this test is efficient in the number of calculations, we need to do $\mathcal{O}\left(n \cdot m\right)$ checks
 to test the line segments of two polygons with $n$ and $m$ edges, respectively, for intersections with one another.
 
