--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -1749,7 +1749,18 @@
 	author = {{Bureau D'Etudes, Institut Laue-Langevin}},
 	title = {{CAD model of the ThALES \cite{thales} spectrometer}},
 	year = {2021},
-	note = "[personal communication, 2021]"
+	note = "Personal communication"
+}
+
+
+@misc
+{
+	IntersectionCheck2021,
+	author = {Lihong Ma},
+	title = {Line segment intersection check},
+	year = {2021},
+	month = {August},
+	note = "Personal communication"
 }
 
 
